# SubgraphContainment

./: .gitignore  README.md
dataset/: test_data_graphs.graph  test_query_graphs.graph
src/: CMakeLists.txt  CommandParser.h  Config.h  FSC.cpp  FSC.h  FSCCommand.h  Graph.cpp  Graph.h  GraphDB.cpp  GraphDB.h  GraphReader.cpp  GraphReader.h  SequenceElement.h  TreeNode.h  Types.h  Utility.cpp  Utility.h  main.cpp
